<resources>
    <string name="app_name">Spades</string>
    <string name="placeBid">Place your Bid</string>
    <string name="nil">Nil</string>
    <string name="doubleNil">Dbl. Nil</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="made">Made</string>
    <string name="bid">Bid</string>
    <string name="points">Rd Pts</string>
    <string name="bags">Bags</string>
    <string name="total">Total</string>

    <string name="confirm">Confirm</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="newGame">New Game</string>
    <string name="continueGame">Continue Game</string>
    <string name="options">Game Options</string>
    <string name="exitGame">Exit Game</string>
    <string name="mainMenu">Main Menu</string>
    <string name="winner">Winner</string>
</resources>

