<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="horizontal"
    tools:context=".mainMenuActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/poker_table" />


        <TableLayout
            android:id="@+id/mainMenuTable"
            android:layout_width="275dp"
            android:layout_height="275dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TableRow
                android:id="@+id/mainMenuRow1"
                android:paddingTop="5dp">
                <Button
                    android:id="@+id/newGame"
                    android:text="@string/newGame"
                    android:layout_height="40dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"/>
            </TableRow>
            <TableRow
                android:id="@+id/mainMenuRow2"
                android:paddingTop="5dp">
                <Button
                    android:id="@+id/continueGame"
                    android:text="@string/continueGame"
                    android:layout_height="40dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"/>
            </TableRow>
            <TableRow
                android:id="@+id/mainMenuRow3"
                android:paddingTop="5dp">
                <Button
                    android:id="@+id/options"
                    android:text="@string/options"
                    android:layout_height="40dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"/>
            </TableRow>
            <TableRow
                android:id="@+id/mainMenuRow4"
                android:paddingTop="5dp">
                <Button
                    android:id="@+id/exitGame"
                    android:text="@string/exitGame"
                    android:layout_height="40dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"/>
            </TableRow>
        </TableLayout>
</RelativeLayout>
