<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/poker_table" />

    <TableLayout
        android:id="@+id/scoreboardTable"
        android:layout_width="300dp"
        android:layout_height="275dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <!--android:visibility="invisible"-->

        <TableRow
            android:gravity="center">
            <TextView
                android:text=""
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:text="@string/made"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:text="@string/bid"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:text="@string/points"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:text="@string/bags"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:text="@string/penalty"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:text="@string/total"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
        </TableRow>
        <TableRow
            android:id="@+id/player1Scoreboard">
            <TextView
                android:id="@+id/player1Name"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/player1Made"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/player1Bid"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/player1Points"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/player1Bags"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/player1Penalty"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/player1Total"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textColor="#FF0000"
                android:textSize="20dp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>